# wfst4str

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test.dot  test.fst
src/: att_parse.rs  lib.rs
