[package]
name = "wfst4str"
version = "1.0.0"
edition = "2018"

[lib]
name = "wfst4str"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
]

[dependencies]

[dependencies.rustfst]
version = "0.9.0"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[dependencies.anyhow]
version = "1.0.47"

[dependencies.nom]
version = "7.1.0"

[dependencies.rand]
version = "0.8.4"