[package]
name = "wfst4str"
version = "1.0.1"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/dmort27/wfst4str"
respository = "https://github.com/dmort27/wfst4str"
documentation = "https://docs.rs/rustfst/1.0.1/wfst4str/"
license = "MIT"
keywords = ["fst", "wfst", "string", "nlp", "linguistics", "python"]


[lib]
name = "wfst4str"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
]

[dependencies]

[dependencies.rustfst]
version = "0.9.0"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[dependencies.anyhow]
version = "1.0.47"

[dependencies.nom]
version = "7.1.0"

[dependencies.rand]
version = "0.8.4"